<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.zenjob.ui.home.offers.OffersViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/appbar_default_elevation">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                app:subtitleTextColor="@android:color/white"
                app:title="@string/lbl_home_toolbar_title"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@android:color/white" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_offers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_offers_list" />

    </LinearLayout>
</layout>